--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <path class="sparks" fill="var(--sparcle-heart)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button>
-            <button type="button" class="card__like-button card__like-button-condition">
+            <button type="button" class="card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -97,7 +97,7 @@
                 <path class="sparks" fill="var(--sparcle-heart)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button>
-            <button type="button" class="card__like-button card__like-button-condition">
+            <button type="button" class="card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -125,7 +125,7 @@
                 <path class="sparks" fill="var(--sparcle-heart)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button>
-            <button type="button" class="card__like-button card__like-button-condition">
+            <button type="button" class="card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -153,7 +153,7 @@
                 <path class="sparks" fill="var(--sparcle-heart)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button>
-            <button type="button" class="card__like-button card__like-button-condition">
+            <button type="button" class="card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -181,7 +181,7 @@
                 <path class="sparks" fill="var(--sparcle-heart)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button>
-            <button type="button" class="card__like-button card__like-button-condition">
+            <button type="button" class="card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -209,7 +209,7 @@
                 <path class="sparks" fill="var(--sparcle-heart)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button>
-            <button type="button" class="card__like-button card__like-button-condition">
+            <button type="button" class="card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -237,7 +237,7 @@
                 <path class="sparks" fill="var(--sparcle-heart)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button>
-            <button type="button" class="card__like-button card__like-button-condition">
+            <button type="button" class="card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -265,7 +265,7 @@
                 <path class="sparks" fill="var(--sparcle-heart)" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button>
-            <button type="button" class="card__like-button card__like-button-condition">
+            <button type="button" class="card__like-button">
               <span class="button__text">Like</span>
             </button>
           </div>
