fixed_html_animation

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p class="card-text">Я с большим нетерпением ждала старта курса. Мысль о том, что я смогу прикоснуться к миру разработки очень вдохновляла. </p>
           </div>
           <div class="card-buttons-container">
-            <button class="card__icon-button is-liked">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class="contour" fill="var(--main-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -87,7 +87,7 @@
             <p class="card-text">На этом этапе мне было очень тяжело. Я думала, что не справлюсь и не смогу усвоить такой объем информации. А самым сложным был тот факт, что дедлайн не за горами и нужно торопиться. </p>
           </div>
           <div class="card-buttons-container">
-            <button type="button" class="card__icon-button is-liked">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class="contour" fill="var(--main-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -115,7 +115,7 @@
             <p class="card-text">После успешной сдачи первой проектной работы я была бесконечно рада, что преодолела неуверенность и сомнения и сформулировала для себя принцип "Важно начать и двигаться вперед, шаг за шагом. Из этих шагов и складывается опыт". </p>
           </div>
           <div class="card-buttons-container">
-            <button type="button" class="card__icon-button is-liked">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class="contour" fill="var(--main-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -143,7 +143,7 @@
             <p class="card-text">Этот этап обучения дал мне возможность понять, что всегда можно сделать лучше, но важно вовремя остановиться, побороть свой перфекционизм и помнить об ограниченности времени.</p>
           </div>
           <div class="card-buttons-container">
-            <button type="button" class="card__icon-button is-liked">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class="contour" fill="var(--main-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -171,7 +171,7 @@
             <p class="card-text">Все так. Мои близкие и друзья поддерживали меня в минуты отчаяния и грусти, коих было не так уж и мало, а прогулки с любимой собакой давали возможность отвлечься от учёбы и пополнить запас сил для последующей работы над проектом. </p>
           </div>
           <div class="card-buttons-container">
-            <button type="button" class="card__icon-button is-liked">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class="contour" fill="var(--main-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -199,7 +199,7 @@
             <p class="card-text">А вот над этим пунктом я всё еще работаю, но, когда в редкие моменты я осознаю, что задачу можно реализовать разными способами - я очень радуюсь этим мыслям и хвалю себя.</p>
           </div>
           <div class="card-buttons-container">
-            <button type="button" class="card__icon-button is-liked">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class="contour" fill="var(--main-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -255,7 +255,7 @@
             <p class="card-text">С каждой проектной работой я все больше убеждаюсь в правильности своего выбора. Ведь так прекрасно наблюдать за тем как из идеи я могу создать прикладные и полезные для других людей вещи. Эта мысль очень меня вдохновляет.</p>
           </div>
           <div class="card-buttons-container">
-            <button type="button" class="card__icon-button is-liked">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class="contour" fill="var(--main-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -281,14 +281,12 @@
         <span class="button__text">Сохранить на память</span>
       </button>
       <dialog class="dialog-window" id="dialog-id">
-        <p class="dialog-header">
-          <span>
-            <svg class="icon-floppy" viewBox="0 0 21 21">
-              <use href="./svg/floppy.svg#floppy"></use>
-            </svg>
-          </span>
-          Вставьте дискету, чтобы продолжить
-        </p>
+        <div class="dialog-header">
+          <svg class="icon-floppy" viewBox="0 0 21 21">
+            <use href="./svg/floppy.svg#floppy"></use>
+         </svg>
+          <p>Вставьте дискету, чтобы продолжить</p>
+        </div>
         <form class="dialog-window-form" method="dialog">
           <button class="button close-button" >
               <span class="button__text">OK</span>
